fixed not copying line breaks in ff

--- a/app/assets/sass/components/_case-discussion.scss
+++ b/app/assets/sass/components/_case-discussion.scss
@@ -10,6 +10,13 @@
 		text-transform: none;
 	}
 
+    pre {
+        padding: 0;
+        margin: 0;
+        border: none;
+        background: none;
+    }
+
 	.discussion-element{
 		margin-top: 10px;
 	}
